# manga_origin_getter

./: .gitignore  AGENTS.md  README.md  WORKFLOW_STATE.md  docker-compose.yml  start-stack.sh
.opencode/: opencode.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  models.py
backend/app/adapters/: base.py  hentai_origines.py  mangas_origines.py  registry.py
backend/app/services/: downloader.py  job_runner.py  library_scheduler.py  library_service.py  library_store.py  logger.py  pdf_builder.py  purge_scheduler.py  slug.py  storage_maintenance.py  utils.py
backend/app/static/: add-manga.html  downloads.html  index.html  link-manga.html  logs.html  manga-detail.html  settings.html
backend/app/storage/: library_db.py  repository.py
backend/tests/: conftest.py  test_adapters.py  test_models.py  test_slug.py  test_utils.py
